# indpack

./: .python-version  README.md  pyproject.toml
.github/workflows/: publish.yml
src/indpack/: __init__.py  __main__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_integration.py
