[project]
name = "indpack"
version = "0.1.1"
description = "Cross-platform process introspection library"
readme = "README.md"
authors = [
    { name = "George Kennedy", email = "gkennedy@gcloudns.net" }
]
requires-python = ">=3.09"
dependencies = []

[project.scripts]
indpack = "indpack.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
]
